[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/img/circle.png" type="Texture" id=1]
[ext_resource path="res://player/img/rec.png" type="Texture" id=2]
[ext_resource path="res://player/script/cursor.gd" type="Script" id=3]
[ext_resource path="res://player/img/circle-hollow.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 150.0

[node name="Cursor" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="Area2D" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="nothin" type="Node2D" parent="."]
visible = false

[node name="Circle" type="Sprite" parent="nothin"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="gun" type="Node2D" parent="."]
visible = false

[node name="bar1" type="Sprite" parent="gun"]
texture = ExtResource( 2 )

[node name="bar2" type="Sprite" parent="gun"]
texture = ExtResource( 2 )

[node name="Circle_hollow" type="Sprite" parent="gun"]
texture = ExtResource( 4 )

[node name="harpoon" type="Node2D" parent="."]
visible = false
